# open-api-trpc-client

./: .gitignore  README.md  package.json  tsconfig.json
.github/workflows/: tests.yml
src/: cli.ts  client.ts  generated.d.ts  generator.ts  index.ts
tests/python-litestar/: app.py  litestar.test.js  litestar.test.ts  pyproject.toml
